Fix SplitPane overflow issue Adjust separator style

--- a/panelSrc/styles/main.css
+++ b/panelSrc/styles/main.css
@@ -12,6 +12,7 @@ body, html, .fill, #content {
 
 .split-pane {
     height: 96%;
+    overflow: hidden;
     width: 100%;
 }
 
@@ -115,12 +116,12 @@ body, html, .fill, #content {
 }
 
 .separator::before {
-    background: #000;
+    background: rgba(0, 0, 0, 0.3);
     content: '';
     display: block;
     height: 100%;
     margin: 0 auto;
-    width: 2px;
+    width: 1px;
 }
 
 #toolbar {
